tests/machine/x/pascal/right_join.error
line: 105
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/right_join.pas
right_join.pas(59,11) Error: Identifier not found "c"
right_join.pas(62,17) Error: Illegal assignment to for-loop variable "o"
right_join.pas(64,19) Error: Identifier not found "c"
right_join.pas(66,30) Error: identifier idents no member "customerId"
right_join.pas(66,43) Error: Identifier not found "c"
right_join.pas(68,54) Error: Identifier not found "c"
right_join.pas(69,48) Error: Incompatible type for arg no. 2: Got "TFPGMap<System.ShortString,System.Variant>", expected "Variant"
right_join.pas(62,15) Error: Incompatible types: got "TFPGMap<System.ShortString,System.LongInt>" expected "TFPGMap<System.ShortString,System.Variant>"
right_join.pas(76,11) Error: Identifier not found "c"
right_join.pas(79,19) Error: Identifier not found "c"
right_join.pas(81,30) Error: identifier idents no member "customerId"
right_join.pas(81,43) Error: Identifier not found "c"
right_join.pas(83,55) Error: Identifier not found "c"
right_join.pas(84,49) Error: Incompatible type for arg no. 2: Got "TFPGMap<System.ShortString,System.Variant>", expected "Variant"
right_join.pas(77,15) Error: Incompatible types: got "TFPGMap<System.ShortString,System.LongInt>" expected "TFPGMap<System.ShortString,System.Variant>"
right_join.pas(56,7) Error: Incompatible types: got "TFPGMap<System.ShortString,System.LongInt>" expected "TFPGMap<System.ShortString,System.Variant>"
right_join.pas(105) Fatal: There were 16 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

